Finish quote feature

--- a/index.html
+++ b/index.html
@@ -4,11 +4,14 @@
         <meta charset="utf-8">
         <title>Random joke</title>
         <link rel="stylesheet" type="text/css" href="vendor/normalize.css">
+        <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.0/css/all.css" integrity="sha384-lKuwvrZot6UHsBSfcMvOkWwlCMgc0TaWr+30HWe3a4ltaBwTZhyTEggF5tJv8tbt" crossorigin="anonymous">
         <link rel="stylesheet" href="css/style.css">
     </head>
     <body>
+        <!--
         <button id="get-joke">Random joke</button>
         <p id="joke"></p>
+        -->
         
         <main>
             <header>
@@ -20,7 +23,7 @@
             </div>
             <div>
                 <button class="trigger"> Random quote </button>
-                <a href="#" target="_blank" class="tweet"><i class="fa fa-lg fa-twitter"></i> Tweet</a>
+                <a href="#" target="_blank" class="tweet"><i class="fab fa-twitter"></i>Tweet</a>
             </div>
         </main>
         
