Fix for random joke

--- a/index.html
+++ b/index.html
@@ -8,11 +8,6 @@
         <link rel="stylesheet" href="css/style.css">
     </head>
     <body>
-        <!--
-        <button id="get-joke">Random joke</button>
-        <p id="joke"></p>
-        -->
-        
         <main>
             <header>
                 <h1>Random quote machine</h1>
@@ -26,7 +21,15 @@
                 <a href="#" target="_blank" class="tweet"><i class="fab fa-twitter"></i>Tweet</a>
             </div>
         </main>
-        
+        <section>
+            <header>
+                <h1>Random joke machine</h1>
+            </header>
+            <div class="box">
+                <h2 id="joke"></h2>
+            </div>
+            <button class="joke" id="get-joke">Random joke</button>
+        </section>
         <script src="js/script.js"></script>
     </body>
 </html>
