Add spinners when data is fetched

--- a/index.html
+++ b/index.html
@@ -13,8 +13,11 @@
                 <h1>Random quote machine</h1>
             </header>
             <div class="box">
-                <h2 class="quote"></h2>
-                <h3 class="author"></h3>
+                <div id="content-quote">
+                    <h2 class="quote"></h2>
+                    <h3 class="author"></h3>
+                </div>
+                <div id="loader-quote"></div>
             </div>
             <div>
                 <button class="trigger"> Random quote </button>
@@ -27,6 +30,7 @@
             </header>
             <div class="box">
                 <h2 id="joke"></h2>
+                <div id="loader-joke"></div>
             </div>
             <button class="joke" id="get-joke">Random joke</button>
         </section>
